--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,14 @@
 cmake_minimum_required(VERSION 3.16)
 
+add_subdirectory(Firstclass)
+
 add_subdirectory(allocation_basics)
 
 add_subdirectory(Simple_calc)
+
+add_subdirectory(firstLib)
+
+add_subdirectory(firstLibCall)
+
+add_subdirectory(Projekt1)
+
