--- a/Projekt1-Matrix/CMakeLists.txt
+++ b/Projekt1-Matrix/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.16)
 
-PROJECT(Projekt1-Matrix)
+project(matrixApp)
 
 add_subdirectory(matrixApp)
+
 add_subdirectory(matrixLib)
